fix: speaker item css on mobile screen

--- a/src/styles/components/speaker-items.scss
+++ b/src/styles/components/speaker-items.scss
@@ -38,10 +38,10 @@
     font-size: $minMobileMaxTabletMeasurementTitle;
   }
   .prop {
-    margin-left: 10px;
+    margin-left: 8px;
   }
   .prop > p {
-    font-size: 15px;
+    font-size: 12px;
   }
 }
 
